# wikipedia-category-downloader

./: .gitignore  Cargo.toml  README.txt
src/: main.rs
