[package]
name = "wikipedia-category-downloader"
version = "0.1.0"
authors = ["maniyar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
url = "2.2.2"
rayon = "1.5"
getopts = "0.2"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls"]
